--- a/css/styles.css
+++ b/css/styles.css
@@ -677,9 +677,17 @@ header.section {
   height: 581px;
   border-radius: 4px;
   background-color: #ffffff;
-  transition: transform 3000ms ease-in-out;
+
+  transition-property: transform;
+  transition-duration: 250ms;
+  transition-timing-function: ease-in-out;
 }
 
+.modal.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
 .backdrop.is-hidden .modal {
   transform: translate(-50%, -50%) scale(0.3);
 }
